--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.1.0",
     "@taiga-ui/cdk": "^3.64.0",
     "@taiga-ui/core": "^3.64.0",
+    "@taiga-ui/i18n": "^3.64.0",
     "@taiga-ui/icons": "^3.64.0",
     "@taiga-ui/kit": "^3.64.0",
     "@taiga-ui/styles": "^3.64.0",
@@ -44,6 +45,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.3.2"
   }
 }
