--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@taiga-ui/kit": "^3.67.0",
     "@taiga-ui/styles": "^3.67.0",
     "@tinkoff/ng-dompurify": "4.0.0",
+    "@tinkoff/ng-polymorpheus": "^4.3.0",
     "date-fns": "^3.3.1",
     "dompurify": "3.0.6",
     "rxjs": "~7.8.0",
