feat(cart.state): add cart store

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^17.2.3",
     "@angular/platform-browser-dynamic": "^17.2.3",
     "@angular/router": "^17.2.3",
+    "@ngxs/store": "^3.8.2",
     "@taiga-ui/addon-commerce": "^3.67.0",
     "@taiga-ui/cdk": "^3.67.0",
     "@taiga-ui/core": "^3.67.0",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "^17.2.2",
     "@angular/cli": "^17.2.2",
     "@angular/compiler-cli": "^17.2.3",
+    "@ngxs/devtools-plugin": "^3.8.2",
     "@types/dompurify": "3.0.5",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.17",
