--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^17.2.3",
     "@angular/platform-browser-dynamic": "^17.2.3",
     "@angular/router": "^17.2.3",
+    "@ngxs/storage-plugin": "^3.8.2",
     "@ngxs/store": "^3.8.2",
     "@taiga-ui/addon-commerce": "^3.67.0",
     "@taiga-ui/cdk": "^3.67.0",
