--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.2",
     "@swc/core": "^1.4.14",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.12.7",
     "eslint": "^8.57.0",
     "pino-pretty": "^11.0.0",
@@ -49,9 +50,13 @@
   },
   "dependencies": {
     "@adonisjs/core": "^6.6.0",
+    "@adonisjs/lucid": "^20.5.1",
     "@types/jsonwebtoken": "^9.0.6",
     "@vinejs/vine": "^2.0.0",
+    "better-sqlite3": "^9.6.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
+    "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2"
   },
   "eslintConfig": {
